Fix diary nutriment lists column-gap

--- a/www/assets/css/global-styles.css
+++ b/www/assets/css/global-styles.css
@@ -12,6 +12,8 @@ html[dir="rtl"] option {direction: rtl;}
 
 i.searchbar-icon {margin: -12px 12px;}
 
+.item-content.item-inner {column-gap: 0.8em;}
+
 #foodlist-container .item-title {width:65% !important;}
 #quantity-container .item-title {width:65% !important;}
 #nutrition .item-title {width:65% !important;}
